--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/socialite": "^5.17",
+        "laravel/tinker": "^2.9",
+        "tymon/jwt-auth": "^2.1",
+        "unicodeveloper/laravel-paystack": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
