problem fix and image resizing

--- a/composer.json
+++ b/composer.json
@@ -58,9 +58,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-                "intervention/image"
-            ]
+            "dont-discover": []
         }
     },
     "config": {
