--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "intervention/image"
+            ]
         }
     },
     "config": {
